--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!--
 	<script src="./js/blocs.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/formHandler.js"></script>
@@ -23,7 +22,6 @@
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-    -->
 
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
@@ -49,25 +47,25 @@
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
-				<div class="navbar row">
+				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="logo agence" height="40" /></a>
-						<!-- <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
-						</button> -->
+						</button>
 					</div>
-					<!-- <nav class="collapse navbar-collapse navbar-1 special-dropdown-nav"> -->
+					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
 								<a href="#">Accueil</a>
 								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
-					<!-- </nav> -->
-				</div>
+					</div>
+				</nav>
 			</div>
 		</div>
 	</header>
@@ -272,73 +270,72 @@
 	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
 			<!-- <div class="row"> -->
-				<!-- <div class="col-sm-12"> -->
-				<h2 class="text-center black">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</h2>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span
-									class="fa fa-instagram icon-md black"></span></a>
-						</div>
+			<!-- <div class="col-sm-12"> -->
+			<h2 class="text-center black">
+				La chouette agence - Agence web basée à Lyon.<br>
+			</h2>
+			<div class="row row-no-gutters social">
+				<div class="col-sm-3">
+					<div class="text-center">
+						<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
 					</div>
 				</div>
-				<div class="row black-25">
-					<div class="col-sm-4">
-						Partenaires
-						<ul class="black-20">
-							<li><a href="#">voiture.com</a></li>
-							<li><a href="#">pizza.com</a></li>
-							<li><a href="#">matoiture.com</a></li>
-							<li><a href="#">immobilierseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul class="black-20">
-							<li><a href="#">annuaireagence.com</a></li>
-							<li><a href="#">annuaireseo.com</a></li>
-							<li><a href="#">annuairemarketing.com</a></li>
-							<li><a href="#">123seo.com</a></li>
-							<li><a href="#">123site.com</a></li>
-							<li><a href="#">annuairewordpress.com</a></li>
-							<li><a href="#">listeagence.com</a></li>
-							<li><a href="#">meilleuresagencesparis.com</a></li>
-							<li><a href="#">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul class="black-20">
-							<li><a href="#">betterseo.com</a></li>
-							<li><a href="#">ameliorerseo.com</a></li>
-							<li><a href="#">seojuicelien.com</a></li>
-							<li><a href="#">meilleursliens.com</a></li>
-							<li><a href="#">liensagogo.com</a></li>
-							<li><a href="#">backlink.com</a></li>
-							<li><a href="#">linkjuiceannuaire.com</a></li>
-							<li><a href="#">remontersurgoogle.com</a></li>
-							<li><a href="#">vraiseofiable.com</a></li>
-						</ul>
+				<div class="col-sm-3">
+					<div class="text-center">
+						<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
 					</div>
 				</div>
-				<!-- </div> -->
+				<div class="col-sm-3">
+					<div class="text-center">
+						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="text-center">
+						<a class="social" href="index.html"><span class="fa fa-instagram icon-md black"></span></a>
+					</div>
+				</div>
+			</div>
+			<div class="row black-25">
+				<div class="col-sm-4">
+					Partenaires
+					<ul class="black-20">
+						<li><a href="#">voiture.com</a></li>
+						<li><a href="#">pizza.com</a></li>
+						<li><a href="#">matoiture.com</a></li>
+						<li><a href="#">immobilierseo.com</a></li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					Annuaires liste 1
+					<ul class="black-20">
+						<li><a href="#">annuaireagence.com</a></li>
+						<li><a href="#">annuaireseo.com</a></li>
+						<li><a href="#">annuairemarketing.com</a></li>
+						<li><a href="#">123seo.com</a></li>
+						<li><a href="#">123site.com</a></li>
+						<li><a href="#">annuairewordpress.com</a></li>
+						<li><a href="#">listeagence.com</a></li>
+						<li><a href="#">meilleuresagencesparis.com</a></li>
+						<li><a href="#">listeseo.com</a></li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					Annuaires liste 2
+					<ul class="black-20">
+						<li><a href="#">betterseo.com</a></li>
+						<li><a href="#">ameliorerseo.com</a></li>
+						<li><a href="#">seojuicelien.com</a></li>
+						<li><a href="#">meilleursliens.com</a></li>
+						<li><a href="#">liensagogo.com</a></li>
+						<li><a href="#">backlink.com</a></li>
+						<li><a href="#">linkjuiceannuaire.com</a></li>
+						<li><a href="#">remontersurgoogle.com</a></li>
+						<li><a href="#">vraiseofiable.com</a></li>
+					</ul>
+				</div>
+			</div>
+			<!-- </div> -->
 			<!-- </div> -->
 			<!-- Footer - bloc-8 END -->
 		</div>
