--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -20,7 +20,7 @@
 	<script src="./js/formHandler.js"></script>
 	<script src="./js/gmaps.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
