--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -10,21 +10,15 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
-	<!--
-	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
-	<script src="./js/formHandler.js"></script>
-	<script src="./js/gmaps.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	-->
-
+	<script src="./js/gmaps.js"></script>
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
 
@@ -46,29 +40,32 @@
 	<div class="page-container">
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="atlanta web design logo" height="40" /></a>
-						<!-- <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-							data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-								class="icon-bar"></span><span class="icon-bar"></span>
-						</button> -->
-					</div>
-					<!-- <div class="collapse navbar-collapse navbar-1 special-dropdown-nav"> -->
-					<ul class="site-navigation nav navbar-nav black-20">
-						<li>
-							<a href="index.html" title="Formulaire de contact">Accueil</a>
-							<a href="#">Nous contacter...</a>
-						</li>
-					</ul>
-					<!-- </div> -->
-				</nav>
+		<header>
+			<!-- bloc-0 -->
+			<div class="bloc bgc-white l-bloc " id="bloc-0">
+				<div class="container bloc-sm">
+					<nav class="navbar row">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+									alt="logo agence" height="40" /></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+								data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+									class="icon-bar"></span><span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+							<ul class="site-navigation nav navbar-nav black-20">
+								<li>
+									<a href="#">Accueil</a>
+									<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</div>
 			</div>
-		</div>
+		</header>
 		<!-- bloc-0 END -->
 
 		<!-- bloc-6 -->
