--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -57,7 +57,7 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav black-20">
 								<li>
-									<a href="#">Accueil</a>
+									<a href="index.html">Accueil</a>
 									<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 								</li>
 							</ul>
