--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -58,7 +58,8 @@
 							<ul class="site-navigation nav navbar-nav black-20">
 								<li>
 									<a href="index.html">Accueil</a>
-									<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
+									<a href="contacts-webdesign.html" title="Formulaire de contact">Nous
+										contacter...</a>
 								</li>
 							</ul>
 						</div>
@@ -70,18 +71,18 @@
 
 		<!-- bloc-6 -->
 		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-			<div class="container bloc-lg">
+			<div class="container">
 				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-pink">
-							Parlons web design !
-						</h1>
-						<h4 class="text-center mg-lg white-2">
-							<br>
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br><br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</h4>
-					</div>
+					<!-- <div class="col-sm-12"> -->
+					<h1 class="text-center hero-bloc-text black-25">
+						Parlons web design !
+					</h1>
+					<h3 class="text-center black-20">
+						<br>
+						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br><br>
+						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+					</h3>
+					<!-- </div> -->
 				</div>
 			</div>
 		</div>
@@ -135,88 +136,53 @@
 		</div>
 		<!-- bloc-7 END -->
 
-		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
-		<!-- ScrollToTop Button END-->
+
 
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<article class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<!-- <div class="row">
 					<div class="col-sm-12"> -->
-						<h4 class="text-center black">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</h4>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md black"></span></a>
-								</div>
+				<h4 class="text-center black">
+					La chouette agence - Agence web basée à Lyon.<br>
+				</h4>
+				<div class="container-liens">
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span
+										class="fa fa-twitter icon-md black"></span></a>
 							</div>
 						</div>
-						<!--	
-						<div class="row">
-							<div class="col-sm-4">
-								Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 1
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 2
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span
+										class="fa fa-facebook icon-md black"></span></a>
 							</div>
 						</div>
-						-->
-				<!--	</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span
+										class="fa fa-dribbble icon-md black"></span></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span
+										class="fa fa-instagram icon-md black"></span></a>
+							</div>
+						</div>
+					</div>
+					<!-- ScrollToTop Button -->
+					<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+							class="fa fa-chevron-up"></span></a>
+					<!-- ScrollToTop Button END-->
+				</div>
+				<!--</div>
 				</div> -->
 			</div>
-		</div>
+		</article>
 		<!-- Footer - bloc-8 END -->
 	</div>
 	<!-- Principal conteneur END -->
