--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -92,9 +92,9 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1" novalidate data-success-msg="Your message has been sent."
-							data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+					<!-- <div class="col-sm-6"> -->
+					<aside class="bloc7-1">
+						<form>
 							<div class="form-group">
 								<label>
 									<h4>Nom</h4>
@@ -119,18 +119,22 @@
 								</label><textarea id="message" class="form-control" rows="4" cols="50"
 									required></textarea>
 							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-								type="submit">
-								Envoyer
-							</button>
 						</form>
-					</div>
-					<div class="col-sm-6">
-						<h4 class="col-sm-6-large">
+					</aside>
+					<aside class="bloc-7-2">
+					<form>
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+						Envoyer
+					</button>
+					</form>
+					<!-- </div> -->
+					<!-- <div class="col-sm-6"> -->
+						<h4">
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 							au vendredi<br>
-						</h4>
-					</div>
+							</h4>
+					<!-- </div> -->
+				</aside>
 				</div>
 			</div>
 		</div>
