--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -18,6 +18,7 @@
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/gmaps.js"></script>
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
@@ -91,7 +92,7 @@
 		<!-- bloc-7 -->
 		<div class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
-				<div class="row">
+				<div class="bloc7">
 					<!-- <div class="col-sm-6"> -->
 					<aside class="bloc7-1">
 						<form>
@@ -113,19 +114,21 @@
 								</label>
 								<input class="form-control" type="email" required id="input_504" />
 							</div>
-							<div class="form-group">
-								<label>
-									<h4>Brief de votre projet (Ajoutez autant de détails que nécessaire)</h4><br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50"
-									required></textarea>
-							</div>
+
 						</form>
 					</aside>
-					<aside class="bloc-7-2">
+					<aside class="bloc7-2">
 					<form>
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
+						<div class="form-group">
+							<label>
+								<h4>Brief de votre projet (Ajoutez autant de détails que nécessaire)</h4><br>
+							</label><textarea id="message" class="form-control" rows="4" cols="50"
+								required></textarea>
+								<button class="bloc-button btn7 btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+									Envoyer
+								</button>
+						</div>
+
 					</form>
 					<!-- </div> -->
 					<!-- <div class="col-sm-6"> -->
