--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-							<a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
-								Contactez notre équipe</a>
+							<nav><a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
+								Contactez notre équipe</a></nav>
 						</h3>
 					</div>
 				</div>
@@ -293,7 +293,7 @@
 				</div>
 			</div>
 			<div class="row black-25">
-				<div class="col-sm-4">
+				<nav class="col-sm-4">
 					Partenaires
 					<ul class="black-20">
 						<li><a href="#">voiture.com</a></li>
@@ -301,7 +301,7 @@
 						<li><a href="#">matoiture.com</a></li>
 						<li><a href="#">immobilierseo.com</a></li>
 					</ul>
-				</div>
+				</nav>
 				<div class="col-sm-4">
 					Annuaires liste 1
 					<ul class="black-20">
