--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -124,11 +124,10 @@
 								<h4>Brief de votre projet (Ajoutez autant de détails que nécessaire)</h4><br>
 							</label><textarea id="message" class="form-control" rows="4" cols="50"
 								required></textarea>
-								<button class="bloc-button btn7 btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+								<button class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
 								</button>
 						</div>
-
 					</form>
 					<!-- </div> -->
 					<!-- <div class="col-sm-6"> -->
