--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
+				<div class="navbar row">
+					<nav class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="logo agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -52,7 +52,7 @@
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
-					</div>
+					</nav>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
@@ -61,7 +61,7 @@
 							</li>
 						</ul>
 					</div>
-				</nav>
+				</div>
 			</div>
 		</div>
 	</header>
