--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="navbar row">
 					<nav class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="logo agence" height="40" /></a>
+								alt="logo agence" height="40" class="test-img" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
