--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
 				<div class="navbar row">
 					<nav class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="logo agence" height="40" class="test-img" /></a>
+								alt="logo agence" height="40"/></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</nav>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
 								<a href="#">Accueil</a>
 								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
-					</div>
+					</nav>
 				</div>
 			</div>
 		</div>
