--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/gmaps.js"></script>
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
