--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		content="Entreprise de design et développement site web à Lyon.Une équipe d'experts pour vous assister en stratégie et illustrations pour vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -163,15 +163,15 @@
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
 						</h2>
-						<h3 class="text-center white-2">
+						<nav class="text-center white-2">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-							<nav><a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
-								Contactez notre équipe</a></nav>
-						</h3>
+							<h3><a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
+								Contactez notre équipe</a></h3>
+							</nav>
 					</div>
 				</div>
 			</div>
