--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -8,7 +8,7 @@
 		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -78,11 +78,11 @@
 					<h1 class="text-center hero-bloc-text black-25">
 						Parlons web design !
 					</h1>
-					<h3 class="text-center black-20">
+					<h2 class="text-center black-20">
 						<br>
 						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br><br>
 						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-					</h3>
+					</h2>
 					<!-- </div> -->
 				</div>
 			</div>
@@ -97,46 +97,39 @@
 					<aside class="bloc7-1">
 						<form>
 							<div class="form-group">
-								<label>
-									<h4>Nom</h4>
-								</label>
+								<label>Nom</label>
 								<input id="name" class="form-control" required />
 							</div>
 							<div class="form-group">
-								<label>
-									<h4>Adresse email</h4>
-								</label>
+								<label>Adresse email</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label>
-									<h4>Comment nous avez-vous connu ?</h4>
-								</label>
+								<label>Comment nous avez-vous connu ?</label>
 								<input class="form-control" type="email" required id="input_504" />
 							</div>
 
 						</form>
 					</aside>
 					<aside class="bloc7-2">
-					<form>
-						<div class="form-group">
-							<label>
-								<h4>Brief de votre projet (Ajoutez autant de détails que nécessaire)</h4><br>
-							</label><textarea id="message" class="form-control" rows="4" cols="50"
-								required></textarea>
-								<button class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+						<form>
+							<div class="form-group">
+								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
+								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+								<button class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
+									type="submit">
 									Envoyer
 								</button>
-						</div>
-					</form>
-					<!-- </div> -->
-					<!-- <div class="col-sm-6"> -->
-						<h4">
+							</div>
+						</form>
+						<!-- </div> -->
+						<!-- <div class="col-sm-6"> -->
+						<h4>
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 							au vendredi<br>
-							</h4>
-					<!-- </div> -->
-				</aside>
+						</h4>
+						<!-- </div> -->
+					</aside>
 				</div>
 			</div>
 		</div>
