--- a/index.html
+++ b/index.html
@@ -103,37 +103,37 @@
 					<div class="text-center">
 						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<h1 class="text-center">
+					<h2>class="text-center">
 						Web design
-					</h1>
-					<h2 class="text-center ">
+					</h2>
+					<h3 class="text-center ">
 						Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
 						zéro, laissez-nous vous réaliser un design dont vous serez fier.
-					</h2>
+					</h3>
 				</div>
 				<div class="col-sm-4">
 					<div class="text-center">
 						<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<h1 class="text-center">
+					<h2 class="text-center">
 						&nbsp;Stratégie
-					</h1>
-					<h2 class="text-center ">
+					</h2>
+					<h3 class="text-center ">
 						Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 						vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-					</h2>
+					</h3>
 				</div>
 				<div class="col-sm-4">
 					<div class="text-center">
 						<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<h1 class="text-center">
+					<h2 class="text-center">
 						Illustrations
-					</h1>
-					<h2 class="text-center ">
+					</h2>
+					<h3 class="text-center ">
 						Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 						graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-					</h2>
+					</h3>
 				</div>
 			</article>
 			<article class="row voffset-lg voffset">
