--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -15,12 +15,12 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
-	<script src="./js/jquery-2.1.0.js" defer></script>
-	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/gmaps.js" defer></script>
+	<script src="./js/gmaps.min.js" defer></script>
 
 	<!-- Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
