gros fichiers js minimisés

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
+	<meta name="keywords"
+		content="sites web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
 	<meta name="description"
 		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
