--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -11,9 +11,9 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
