--- a/index.html
+++ b/index.html
@@ -275,22 +275,22 @@
 			<div class="row row-no-gutters social">
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
+						<a aria-label="Twitter" class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
+						<a arial-label="Facebook" class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
+						<a arial-label="Sport" class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html"><span class="fa fa-instagram icon-md black"></span></a>
+						<a arial-label= "Instagram" class="social" href="index.html"><span class="fa fa-instagram icon-md black"></span></a>
 					</div>
 				</div>
 			</div>
